# soducov4-pipeline

./: .gitignore  README.md  pyproject.toml
cli/: shared.py  soduco.py
cli/commands/: __init__.py  assembly.py  chunking.py  extraction.py  ocr.py
docs/: artifacts.md
examples/didot_1903/artifacts/: assembly.json  chunking.json  extraction.json  ocr.json
pipeline/: __init__.py  logging.py
pipeline/assembly/: engine.py  schemas.py  stage.py
pipeline/chunking/: engine.py  schemas.py  stage.py
pipeline/core/: artifact.py  context.py  executor.py  stage.py  store.py
pipeline/extraction/: postprocessing.py  schemas.py  stage.py  utils.py
pipeline/extraction/engine/: __init__.py  factory.py  mistral.py  ollama.py
pipeline/ocr/: engine.py  schemas.py  stage.py
pipeline/ocr/postprocessing/: layout.py  spuriousness.py
prompts/: system_prompt-mistral-didot.txt  system_prompt-mistral-didottype1900.txt  system_prompt-mistral-latynna.txt  system_prompt-ollama-latynna.txt
scripts/: assembled_to_csv.sh  extract_pages.sh
